# hackathon-2024-06-founders

./: README.md  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
fastapi/: pyproject.toml
fastapi/prisma/: schema.prisma
fastapi/src/: app.py
fastapi/src/cards_against_humanity/: chain.py  chain_guard.py
fastapi/src/guardrails_output_parser/: chain.py
nextapp/: package-lock.json  package.json
nextapp/app/: page.tsx
nextapp/pages/api/: generateImage.ts  themePrompt.ts
nextapp/src/components/: Card.tsx  GameBoard.tsx  ThemeInput.tsx
nextapp/src/utils/: groqClient.ts  openaiClient.ts
nextapp/styles/: globals.css
